2008-03-19  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/__go_draw_axes__.m: Additional correction for symbol codes.

2008-03-19  Ben Abbott  <bpabbott@mac.com>
	
	* statistics/base/mode.m: Add NDArray tests.

2008-03-19  Jaroslav Hajek <highegg@gmail.com>

	* statistics/distributions/exppdf.m,
	statistics/distributions/expcdf.m,
	statistics/distributions/expinv.m,
	statistics/distributions/exprnd.m: Doc fix.

2008-03-19  David Bateman  <dbateman@free.fr>

	* statistics/base/mode.m: Fix for row vectors.

	* plot/__scatter__.m: Modify for change of markersize in
	__go_draw_axes__.m and for compatibility.
	* plot/__go_draw_axes__.m: Don't divide the marker size by 6
	twice.
	* plot/scatter3.m: Doc fix.

2008-03-18  Ben Abbott <bpabbott@mac.com>

	* specfun/beta.m: Fix for negative inputs.

2008-03-18  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/__go_draw_axes__.m: Use correct symbol codes.

2008-03-14  Kai Habel  <kai.habel@gmx.de>

        * plot/__go_draw_axes__.m: Expicitly set gnuplot user
        style to default to avoid wrong mesh color in some cases.

2008-03-12  David Bateman  <dbateman@free.fr>

	* geometry/griddata3.m: Use griddatan and not griddata
	internally. Return vi and not yi. Add test code.

2008-03-11  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Use get to access hidden properties.
	Use strcmpi when comparing string properties.

	* io/csread.m, io/csvwrite.m, io/dlmwrite.m: Style fixes.

2008-03-11  Kai Habel  <kai.habel@gmx.de>

        * plot/__go_draw_axes__.m: Plot surfaces in front of axes.
        Allow plotting of uniform colored mesh plots with and
        w/o hidden line removal.

2008-03-11  David Bateman  <dbateman@free.fr>

	* io/dlmwrite.m, io/csvread.m, io/csvwrite.m: Files ported from
	octave-forge.
	* io/Makefile.in (SOURCES): Add them here.

2008-03-07  John W. Eaton  <jwe@octave.org>

	* plot/contourf.m: Set axes layer property to "top".

	* plot/__go_draw_axes__.m: Handle tickdir property.