@@ -113,6 +113,7 @@ Ross Lippert
 David Livings
 Erik de Castro Lopo
 Massimo Lorenzin
+Emil Lucretiu
 Hoxide Ma
 James Macnicol
 Jens-Uwe Mager
