@@ -1,3 +1,7 @@
+2008-03-19  Emil Lucretiu  <emil@la.mine.nu>
+
+	* signal/sinetone.m: Ensure integral number of samples.
+
 2008-03-19  Michael D. Godfrey  <godfrey@isl.stanford.edu>
 
 	* plot/__go_draw_axes__.m: Additional correction for symbol codes.
